assets/base.css
/* ... */
details[open]:hover>.header__menu-item {
    text-decoration-thickness: 0.2rem;
}

details[open]>.header__menu-item .icon-caret {
    transform: rotate(180deg);
}

.header__active-menu-item {
    transition: text-decoration-thickness var(--duration-short) ease;
    color: rgb(var(--color-foreground));
    text-decoration: underline;
    text-underline-offset: 0.3rem;
}

.header__menu-item:hover .header__active-menu-item {
    text-decoration-thickness: 0.2rem;
}

.header__submenu {
    transition: opacity var(--duration-default) ease,
    transform var(--duration-default) ease;
}

.global-settings-popup,
.header__submenu.global-settings-popup {
    border-radius: var(--popup-corner-radius);
    border-color: rgba(var(--color-foreground), var(--popup-border-opacity));
    border-style: solid;
    border-width: var(--popup-border-width);
    box-shadow: var(--popup-shadow-horizontal-offset) var(--popup-shadow-vertical-offset) var(--popup-shadow-blur-radius) rgba(var(--color-shadow), var(--popup-shadow-opacity));
}

.header__submenu.list-menu {
    padding: 2.4rem 0;
}

.header__submenu .header__submenu {
    background-color: rgba(var(--color-foreground), 0.03);
    padding: 0.5rem 0;
    margin: 0.5rem 0;
}

.header__submenu .header__menu-item:after {
    right: 2rem;
}

.header__submenu .header__menu-item {
    justify-content: space-between;
    padding: 0.8rem 2.4rem;
}

.header__submenu .header__submenu .header__menu-item {
    padding-left: 3.4rem;
}

.header__menu-item .icon-caret {
    right: 0.8rem;
}

.header__submenu .icon-caret {
    flex-shrink: 0;
    margin-left: 1rem;
    position: static;
}

header-menu>details,
details-disclosure>details {
    position: relative;
}

@keyframes animateMenuOpen {
    0% {
        opacity: 0;
        transform: translateY(-1.5rem);
    }

    100% {
        opacity: 1;
        transform: translateY(0);
    }
}

.overflow-hidden-mobile,
.overflow-hidden-tablet {
    overflow: hidden;
}

@media screen and (min-width: 750px) {
    .overflow-hidden-mobile {
        overflow: auto;
    }
}

@media screen and (min-width: 990px) {
    .overflow-hidden-tablet {
        overflow: auto;
    }
}

.badge {
    border: 1px solid transparent;
    border-radius: var(--badge-corner-radius);
    display: inline-block;
    font-size: 1.2rem;
    letter-spacing: 0.1rem;
    line-height: 1;
    padding: 0.6rem 1.3rem;
    text-align: center;
    background-color: rgb(var(--color-badge-background));
    border-color: rgba(var(--color-badge-border), var(--alpha-badge-border));
    color: rgb(var(--color-foreground));
    word-break: break-word;
}

.gradient {
    background: rgb(var(--color-background));
    background: var(--gradient-background);
    background-attachment: fixed;
}

@media screen and (forced-colors: active) {
    .icon {
        color: CanvasText;
        fill: CanvasText !important;
    }

    .icon-close-small path {
        stroke: CanvasText;
    }
}

.ratio {
    display: flex;
    position: relative;
    align-items: stretch;
}

.ratio::before {
    content: '';
    width: 0;
    height: 0;
    padding-bottom: var(--ratio-percent);
}

.content-container {
    border-radius: var(--text-boxes-radius);
    border: var(--text-boxes-border-width) solid rgba(var(--color-foreground), var(--text-boxes-border-opacity));
    position: relative;
}

.content-container:after {
    content: '';
    position: absolute;
    top: calc(var(--text-boxes-border-width) * -1);
    right: calc(var(--text-boxes-border-width) * -1);
    bottom: calc(var(--text-boxes-border-width) * -1);
    left: calc(var(--text-boxes-border-width) * -1);
    border-radius: var(--text-boxes-radius);
    box-shadow: var(--text-boxes-shadow-horizontal-offset) var(--text-boxes-shadow-vertical-offset) var(--text-boxes-shadow-blur-radius) rgba(var(--color-shadow), var(--text-boxes-shadow-opacity));
    z-index: -1;
}

.content-container--full-width:after {
    left: 0;
    right: 0;
    border-radius: 0;
}

@media screen and (max-width: 749px) {
    .content-container--full-width-mobile {
        border-left: none;
        border-right: none;
        border-radius: 0;
    }

    .content-container--full-width-mobile:after {
        display: none;
    }
}

.global-media-settings {
    position: relative;
    border: var(--media-border-width) solid rgba(var(--color-foreground), var(--media-border-opacity));
    border-radius: var(--media-radius);
    overflow: visible !important;
    background-color: rgb(var(--color-background));
}

.global-media-settings:after {
    content: '';
    position: absolute;
    top: calc(var(--media-border-width) * -1);
    right: calc(var(--media-border-width) * -1);
    bottom: calc(var(--media-border-width) * -1);
    left: calc(var(--media-border-width) * -1);
    border-radius: var(--media-radius);
    box-shadow: var(--media-shadow-horizontal-offset) var(--media-shadow-vertical-offset) var(--media-shadow-blur-radius) rgba(var(--color-shadow), var(--media-shadow-opacity));
    z-index: -1;
}

.global-media-settings--no-shadow {
    overflow: hidden !important;
}

.global-media-settings--no-shadow:after {
    content: none;
}

.global-media-settings img,
.global-media-settings iframe,
.global-media-settings model-viewer,
.global-media-settings video {
    border-radius: calc(var(--media-radius) - var(--media-border-width));
}

.content-container--full-width,
.global-media-settings--full-width,
.global-media-settings--full-width img {
    border-radius: 0;
    border-left: none;
    border-right: none;
}
/* ... */

